# nixcode-ai

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md  config.toml.example
apps/nixcode-cli/: Cargo.toml
apps/nixcode-cli/docs/: README.md  api-reference.md  architecture.md  components.md  developer-guide.md  index.md  user-guide.md
apps/nixcode-cli/src/: app.rs  command_popup.rs  input_mode.rs  main.rs  model_popup.rs  popup_utils.rs  status_bar.rs  user_input.rs
apps/nixcode-cli/src/utils/: highlights.rs  mod.rs
apps/nixcode-cli/src/widgets/: chat.rs  message_widget.rs  mod.rs
libs/llm_sdk/: Cargo.toml
libs/llm_sdk/docs/: README.md  client.md  config.md  cost.md  custom_providers.md  errors.md  message.md  models.md  streaming.md  tokens.md  tools.md  tools_usage.md
libs/llm_sdk/src/: config.rs  json_schema.rs  lib.rs  providers.rs  stop_reason.rs  tools.rs
libs/llm_sdk/src/client/: anthropic.rs  mod.rs  openai.rs
libs/llm_sdk/src/client/anthropic/: client.rs  mod.rs  request.rs
libs/llm_sdk/src/client/genai/: client.rs  request.rs
libs/llm_sdk/src/client/openai/: client.rs  mod.rs  request.rs
libs/llm_sdk/src/client/request/: mod.rs
libs/llm_sdk/src/errors/: llm.rs
libs/llm_sdk/src/message/: message.rs  mod.rs  response.rs  usage.rs
libs/llm_sdk/src/message/anthropic/: events.rs  mod.rs  tokens.rs
libs/llm_sdk/src/message/common/: llm_message.rs  mod.rs
libs/llm_sdk/src/message/content/: image.rs  image_source.rs  mod.rs  text.rs  thinking.rs  tools.rs
libs/llm_sdk/src/message/genai/: mod.rs
libs/llm_sdk/src/message/openai/: events.rs  mod.rs  tokens.rs
libs/llm_sdk/src/models/: capabilities.rs  llm_model.rs  mod.rs
libs/llm_sdk/src/models/anthropic/: haiku35.rs  mod.rs  sonnet37.rs
libs/nixcode/: Cargo.toml
libs/nixcode-macros/: Cargo.toml
libs/nixcode-macros/docs/: README.md  index.md  technical.md  testing.md  usage-guide.md
libs/nixcode-macros/src/: lib.rs
libs/nixcode/docs/: README.md  architecture.md
libs/nixcode/docs/api/: README.md  public.md  tool.md
libs/nixcode/docs/core/: README.md  config.md  events.md  nixcode.md  project.md  prompts.md
libs/nixcode/docs/tools/: README.md  commands.md  fs.md  git.md  github.md  glob.md  prompt.md  search.md
libs/nixcode/docs/utils/: README.md  fs.md
libs/nixcode/src/: lib.rs  llm_ext.rs
libs/nixcode/src/config/: mod.rs
libs/nixcode/src/events/: mod.rs
libs/nixcode/src/project/: mod.rs
libs/nixcode/src/prompts/: system.rs
libs/nixcode/src/tools/: content_utils.rs  fs.rs  git.rs  glob.rs  mod.rs  prompt.rs  replace_content.rs  search_content.rs
libs/nixcode/src/tools/commands/: cargo_build.rs  cargo_fix.rs  cargo_fmt.rs  cargo_test.rs  mod.rs
libs/nixcode/src/tools/fs/: create_file.rs  delete_file.rs  delete_text_file_partial.rs  file_partial_utils.rs  mod.rs  read_text_file.rs  tests.rs  update_text_file.rs  update_text_file_partial.rs  write_text_file.rs
libs/nixcode/src/tools/git/: git_add.rs  git_branch_create.rs  git_branch_delete.rs  git_branches.rs  git_checkout.rs  git_commit.rs  git_diff.rs  git_log.rs  git_merge.rs  git_pull.rs  git_push.rs  mod.rs  (+9 more)
libs/nixcode/src/utils/: fs.rs
(+43 files in other folders)
