[package]
name = "nixcode-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
nixcode = { path = '../../libs/nixcode' }
chrono = { version = "0.4.40" }
tokio = { version = "1.44.1", features = ["fs", "macros", "rt-multi-thread"] }
tokio-stream = "0.1.17"
dotenv = "0.15.0"
ratatui = { version = "0.29.0" }
crossterm = { version = "0.28.1", features = ["event-stream"] }
anyhow = "1.0.97"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.140"
rustyline = "15.0.0"     # For handling input with history
colored = "3.0.0"        # For colorful output
nixcode_llm_sdk = { path = '../../libs/llm_sdk' }