[package]
name = "nixcode-cli"
version = "0.4.0"
edition = "2021"

[dependencies]
nixcode = { path = '../../libs/nixcode' }
chrono = { version = "0.4.40" }
tokio = { version = "1.44.1", features = ["fs", "macros", "rt-multi-thread"] }
tokio-stream = "0.1.17"
dotenv = "0.15.0"
ratatui = { version = "0.29.0", features = ["unstable-rendered-line-info"] }
crossterm = { version = "0.28.1", features = ["event-stream"] }
anyhow = "1.0.97"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.140"
nixcode_llm_sdk = { path = '../../libs/llm_sdk' }
unicode-width = "0.1.11" # For correct handling of character widths in terminal

syntect = { version = "5.2.0" }
lazy_static = "1.5.0"
simple-logging = { version = "2.0.2" }
log = { version = "0.4.27" }

[build-dependencies]
openssl-sys = { version = "0.9", features = ["vendored"] }