[package]
name = "nixcode_llm_sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
tokio = { version = "1.44.1" }
reqwest = { version = "0.12.14", features = ["json", "stream"] }
eventsource-stream = "0.2.3"
futures = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
secrecy = "0.10.3"
log = { version = "0.4.27" }
lazy_static = "1.5.0"