[package]
name = "nixcode-macros"
version = "0.1.0"
edition = "2021"

[dependencies]
syn = { version = "2.0", features = ["full", "parsing"] }
quote = "1.0"
proc-macro2 = "1.0"
schemars = "0.8" # Dodaj schemars, aby była dostępna w makrze
serde_json = "1.0" # Potrzebne do generowania JsonSchema

[lib]
proc-macro = true